5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1723_2507.log
== TEST (2019-05-14 11:26:33) 
-- CODE:
qi = int(input("Quantidade inicial de pirarucus: "))
pc = int(input("Percentual de crescimento: "))
qf1 = int(input("Quantidade de pirarucus retirados por mes: "))
qf2 = int(input("Quantidade de pirarucus retirados por mes: "))
qf3 = int(input("Quantidade de pirarucus retirados por mes: "))
m = 0
perc = pc / 100
while (qi > 0) and (qi <= 8000):
	qi = qi + (qi * perc)
	qi = qi - qf
	m = m + 1
if (qi > 1200):
	msg = "MAXIMO"
else:
	msg = "ZERO"
print(msg)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qi = qi - qf
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:29:05) 
-- CODE:
qi = int(input("Quantidade inicial de pirarucus: "))
pc = int(input("Percentual de crescimento: "))
perc = pc / 100
while (qi > 0) and (qi <= 8000):
	qf = int(input("Quantidade de pirarucus retirados por mes: "))
	qi = qi + (qi * perc)
	qi = qi - qf
	m = m + 1
if (qi > 1200):
	msg = "MAXIMO"
else:
	msg = "ZERO"
print(msg)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m = m + 1
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:29:36) 
-- CODE:
qi = int(input("Quantidade inicial de pirarucus: "))
pc = int(input("Percentual de crescimento: "))
perc = pc / 100
m = 0
while (qi > 0) and (qi <= 8000):
	qf = int(input("Quantidade de pirarucus retirados por mes: "))
	qi = qi + (qi * perc)
	qi = qi - qf
	m = m + 1
if (qi > 1200):
	msg = "MAXIMO"
else:
	msg = "ZERO"
print(msg)
print(m)

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:29:54) 
-- CODE:
qi = int(input("Quantidade inicial de pirarucus: "))
pc = int(input("Percentual de crescimento: "))
perc = pc / 100
m = 0
while (qi > 0) and (qi <= 8000):
	qf = int(input("Quantidade de pirarucus retirados por mes: "))
	qi = qi + (qi * perc)
	qi = qi - qf
	m = m + 1
if (qi > 1200):
	msg = "MAXIMO"
else:
	msg = "ZERO"
print(msg)
print(m)

-- EXECUTION TIME:
0.135313
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:48:14) 
-- CODE:
qi = int(input("Quantidade inicial de pirarucus: "))
pc = int(input("Percentual de crescimento: "))
perc = pc / 100
m = 0
while (qi > 0) and (qi <= 8000):
	qf = int(input("Quantidade de pirarucus retirados por mes: "))
	qi = qi + (qi * perc) - qf
	m = m + 1
if (qi > 1200):
	msg = "MAXIMO"
else:
	msg = "ZERO"
print(msg)
print(m)

-- EXECUTION TIME:
0.158963
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
